--- a/config/routes/articles.yml
+++ b/config/routes/articles.yml
@@ -6,3 +6,12 @@ oit_article_index:
     _disable_module_prefix: true
     _legacy_controller: 'AdminOpenArticles'
     _legacy_link: 'AdminOpenArticles'
+
+oit_article_create:
+  path: /create
+  methods: [GET, POST]
+  defaults:
+    _controller: 'Vex6\OpenArticles\Controller\AdminOpenArticles::createAction'
+    _disable_module_prefix: true
+    _legacy_controller: 'AdminOpenArticles'
+    _legacy_link: 'AdminOpenArticles'
