--- a/config/admin/services.yml
+++ b/config/admin/services.yml
@@ -29,6 +29,7 @@ services:
     class: 'Vex6\OpenArticles\Grid\Data\Factory\ArticleGridDataFactory'
     arguments:
       - '@openarticles.grid.data.factory'
+      - '@openarticles.adapter.article_logo_thumbnail_provider'
 
   openarticles.grid.grid_factory:
     class: 'PrestaShop\PrestaShop\Core\Grid\GridFactory'
@@ -38,6 +39,12 @@ services:
       - '@prestashop.core.grid.filter.form_factory'
       - '@prestashop.core.hook.dispatcher'
 
+ # IMAGE PROVIDER
+
+  openarticles.adapter.article_logo_thumbnail_provider:
+    class: 'Vex6\OpenArticles\Adapter\LogoThumbnailProvider'
+    arguments:
+      - '@prestashop.core.image.parser.image_tag_source_parser'
 
  # FORM
 
