--- a/config/routes/articles.yml
+++ b/config/routes/articles.yml
@@ -1,6 +1,6 @@
 oit_article_index:
   path: /
-  methods: GET
+  methods: [GET, PUT]
   defaults:
     _controller: 'Vex6\OpenArticles\Controller\AdminOpenArticles::indexAction'
     _disable_module_prefix: true
